# floorplan-llm

./: .gitignore  pyproject.toml  pyproject.toml.bak  uv.lock.bak
config/build_dataset/json2arrow/: pipeline.yaml
config/build_dataset/rplan2json/: pipeline.yaml  room_type_merge.json
config/build_dataset/visualize_json/: color_map.yaml
config/build_model/tokenization/: pipeline.yaml
config/inference/: pipeline.yaml
config/training/augmentation/: pre_stage.yaml  sft.yaml
config/training/grpo/: pipeline.yaml
config/training/pre_stage/: pipeline.yaml
config/training/rl/: pipeline.yaml
config/training/sft/: pipeline.yaml
config/utils/: merge.yaml
docs/: Docs.md  README.md
scripts/build_dataset/json2arrow/: run_conversion.py
scripts/build_dataset/rplan2json/: run_extraction.py  validate_jsonl.py
scripts/build_dataset/visualize_json/: run_visualization.py
scripts/build_model/tokenization/: build_vocab.py
scripts/inference/: run_inference.py
scripts/training/: run_grpo.py  run_pre_stage.py  run_rl.py  run_sft.py
scripts/training/augmentation/: validate_augmentation.py
scripts/utils/: extract_partial_state.py  merge_model.py
src/build_dataset/json2arrow/: __init__.py  converter.py  schema.py  validator.py
src/build_dataset/rplan2json/: serializer.py  (+5 more)
src/inference/: __init__.py  condition_builder.py  generator.py  model_loader.py  output_parser.py  result_saver.py
src/utils/: extract_partial_state.py  model_merger.py
tests/inference/: validate_inference.py
tests/utils/: test_extract_partial_state.py
wandb/: .gitignore  latest-run
(+57 files in other folders)
